--- a/style.css
+++ b/style.css
@@ -19,39 +19,48 @@ color code #FF85B3 light pink */
   font-family: 'cooper_blackregular';
   src: url('font/COOPBL.TTF');
 }
-h1,.logo {
+
+h1,
+.logo {
   font-family: 'cooper_blackregular';
 }
 
 .bg-blue {
   background-color: var(--primary);
 }
+
 .text-blue {
   color: var(--primary);
 }
+
 .bg-pink {
   background-color: var(--ternary);
 }
+
 .text-pink {
   color: var(--ternary);
 }
+
 /* navbar */
 .navbar {
   background-color: var(--transparent);
   backdrop-filter: blur(3px);
 }
+
 .nav-link.active,
 .nav-link:hover {
   text-decoration: underline;
   color: var(--ternary) !important;
   font-weight: bold;
 }
+
 /* .btn{
     color: white;
 } */
 .btn:hover {
   color: var(--primary) !important;
 }
+
 .background-image {
   transform: rotate(180deg);
 }
@@ -65,6 +74,7 @@ h1,.logo {
   transition: all 0.4s ease-in;
   transform: translateY(-20px) !important;
 }
+
 .icon {
   height: 5rem;
 }
@@ -78,4 +88,9 @@ h1,.logo {
   .icon {
     height: 2.5rem;
   }
+}
+
+
+.text-white {
+  color: white;
 }
