--- a/style.css
+++ b/style.css
@@ -94,3 +94,9 @@ h1,
 .text-white {
   color: white;
 }
+/* img{
+box-shadow:
+  0.5px 4.5px 10px rgba(0, 0, 0, 0.07),
+  4px 36px 80px rgba(0, 0, 0, 0.14)
+;
+} */
